--- a/src/ui/resources.qrc
+++ b/src/ui/resources.qrc
@@ -55,6 +55,7 @@
         <file alias="notepadqq_hu.qm">../translations/notepadqq_hu.qm</file>
         <file alias="notepadqq_it.qm">../translations/notepadqq_it.qm</file>
         <file alias="notepadqq_ja.qm">../translations/notepadqq_ja.qm</file>
+        <file alias="notepadqq_nl.qm">../translations/notepadqq_nl.qm</file>
         <file alias="notepadqq_pl.qm">../translations/notepadqq_pl.qm</file>
         <file alias="notepadqq_pt.qm">../translations/notepadqq_pt.qm</file>
         <file alias="notepadqq_ru.qm">../translations/notepadqq_ru.qm</file>
